--- a/apps.html
+++ b/apps.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,41 +26,41 @@
         <div class="apps-section">
             <h3>Member Services</h3>
             <div class="apps-grid">
-                <div class="app-item">Profile Management</div>
-                <div class="app-item">Member Directory</div>
-                <div class="app-item">ID Card Management</div>
+                <div class="app-item"><i class="material-icons">person</i><span>Profile Management</span></div>
+                <div class="app-item"><i class="material-icons">group</i><span>Member Directory</span></div>
+                <div class="app-item"><i class="material-icons">credit_card</i><span>ID Card Management</span></div>
             </div>
         </div>
         <div class="apps-section">
             <h3>Events & Competitions</h3>
             <div class="apps-grid">
-                <div class="app-item">Event & Meeting Management</div>
-                <div class="app-item">National Competition Management</div>
+                <div class="app-item"><i class="material-icons">event</i><span>Event & Meeting Management</span></div>
+                <div class="app-item"><i class="material-icons">emoji_events</i><span>National Competition Management</span></div>
             </div>
         </div>
         <div class="apps-section">
             <h3>Communication</h3>
             <div class="apps-grid">
-                <div class="app-item">Communication Hub</div>
-                <div class="app-item">Polls & Surveys</div>
+                <div class="app-item"><i class="material-icons">chat</i><span>Communication Hub</span></div>
+                <div class="app-item"><i class="material-icons">poll</i><span>Polls & Surveys</span></div>
             </div>
         </div>
         <div class="apps-section">
             <h3>Support</h3>
             <div class="apps-grid">
-                <div class="app-item">Helpdesk</div>
+                <div class="app-item"><i class="material-icons">help</i><span>Helpdesk</span></div>
             </div>
         </div>
         <div class="apps-section">
             <h3>Resources</h3>
             <div class="apps-grid">
-                <div class="app-item">Resource Library</div>
+                <div class="app-item"><i class="material-icons">folder</i><span>Resource Library</span></div>
             </div>
         </div>
         <div class="apps-section">
             <h3>Administration</h3>
             <div class="apps-grid">
-                <div class="app-item">Admin Panel</div>
+                <div class="app-item"><i class="material-icons">admin_panel_settings</i><span>Admin Panel</span></div>
             </div>
         </div>
     </div>
