--- a/helpdesk/index.html
+++ b/helpdesk/index.html
@@ -8,11 +8,25 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <div class="apps-header">
-        <a href="../home.html"><i class="material-icons">home</i></a>
-        <a href="../apps.html"><i class="material-icons">apps</i></a>
+    <div class="dashboard-header">
+        <div class="logo">MKAN Connect</div>
+        <div class="user-menu">
+            <div class="theme-toggle">
+                <label class="toggle-switch">
+                    <input type="checkbox" id="theme-toggle-checkbox">
+                    <span class="slider"></span>
+                </label>
+            </div>
+            <a href="../apps.html" style="color: inherit;"><i class="material-icons" id="apps-icon">apps</i></a>
+            <div class="user-avatar">NA</div>
+        </div>
     </div>
-    <div class="dashboard-content">
+    <div class="top-menu">
+        <a href="#" class="active"><i class="material-icons">add_comment</i><span>New Ticket</span></a>
+        <a href="#"><i class="material-icons">list_alt</i><span>My Tickets</span></a>
+        <a href="#"><i class="material-icons">quiz</i><span>Knowledge Base</span></a>
+    </div>
+    <div class="app-content">
         <div class="welcome-message">
             <h2>Helpdesk</h2>
             <p>This is the page for Helpdesk.</p>
