--- a/profile/index.html
+++ b/profile/index.html
@@ -24,8 +24,11 @@
     </div>
     <div class="top-menu">
         <a href="#" class="active"><i class="material-icons">dashboard</i><span>Dashboard</span></a>
-        <a href="#"><i class="material-icons">edit</i><span>Edit Profile</span></a>
-        <a href="#"><i class="material-icons">settings</i><span>Settings</span></a>
+        <a href="edit.html"><i class="material-icons">edit</i><span>Edit Profile</span></a>
+        <a href="settings.html"><i class="material-icons">settings</i><span>Settings</span></a>
+        <a href="change-password.html"><i class="material-icons">lock</i><span>Change Password</span></a>
+        <a href="activities.html"><i class="material-icons">history</i><span>My Activities</span></a>
+        <a href="financials.html"><i class="material-icons">account_balance_wallet</i><span>Financial Status</span></a>
     </div>
     <div class="app-content">
         <div class="breadcrumb">
@@ -36,14 +39,13 @@
             <span>Maroof Bolaji Abdul Kareem</span>
         </div>
         <div class="profile-header">
-            <div class="profile-pic">M</div>
+            <div class="profile-pic"><img src="https://i.pravatar.cc/100" alt="Profile Picture" style="border-radius: 50%;"></div>
             <div class="profile-info">
                 <h2>Maroof Bolaji Abdul Kareem</h2>
                 <p>41337</p>
             </div>
             <div class="profile-actions">
-                <button>Edit <i class="material-icons">edit</i></button>
-                <button class="refresh">Refresh <i class="material-icons">refresh</i></button>
+                <a href="edit.html" class="button">Edit <i class="material-icons">edit</i></a>
             </div>
         </div>
         <div class="profile-content">
