--- a/profile/index.html
+++ b/profile/index.html
@@ -39,7 +39,7 @@
             <span>Maroof Bolaji Abdul Kareem</span>
         </div>
         <div class="profile-header">
-            <div class="profile-pic"><img src="https://i.pravatar.cc/100" alt="Profile Picture" style="border-radius: 50%;"></div>
+            <div class="profile-pic"><img src="https://www.w3schools.com/howto/img_avatar.png" alt="Profile Picture"></div>
             <div class="profile-info">
                 <h2>Maroof Bolaji Abdul Kareem</h2>
                 <p>41337</p>
