--- a/profile/financials.html
+++ b/profile/financials.html
@@ -48,10 +48,20 @@
     </div>
     <div id="chat-modal" class="modal hidden">
         <div class="modal-content">
-            <span class="close-btn">&times;</span>
-            <h3>Solo Assistant</h3>
-            <p>Start a conversation</p>
-            <input type="text" placeholder="Type your message...">
+            <div class="chat-header">
+                <h3><i class="material-icons">chat</i> MKAN Connect Assistant</h3>
+                <span class="close-btn">&times;</span>
+            </div>
+            <div class="chat-body">
+                <i class="material-icons chat-icon-large">chat</i>
+                <h2>Start a conversation</h2>
+                <p>Ask me anything about MKAN Connect or how I can help you today.</p>
+            </div>
+            <div class="chat-input">
+                <input type="text" placeholder="Type your message...">
+                <i class="material-icons">mic</i>
+                <i class="material-icons">send</i>
+            </div>
         </div>
     </div>
     <script src="../script.js"></script>
