--- a/home.html
+++ b/home.html
@@ -85,9 +85,11 @@
                     <span class="close-btn">&times;</span>
                 </div>
                 <div class="chat-body">
-                    <i class="material-icons chat-icon-large">chat</i>
-                    <h2>Start a conversation</h2>
-                    <p>Ask me anything about MKAN Connect or how I can help you today.</p>
+                    <div class="chat-initial-message">
+                        <i class="material-icons chat-icon-large">chat</i>
+                        <h2>Start a conversation</h2>
+                        <p>Ask me anything about MKAN Connect or how I can help you today.</p>
+                    </div>
                 </div>
                 <div class="chat-input">
                     <input type="text" placeholder="Type your message...">
