custom side menu

--- a/communication/index.html
+++ b/communication/index.html
@@ -39,7 +39,7 @@
         <div class="modal-content">
             <div class="chat-input">
                 <input type="text" placeholder="Type your message...">
-                <i class="material-icons">send</i>
+                <button class="material-icons">send</button>
             </div>
         </div>
     </div>
