--- a/communication/index.html
+++ b/communication/index.html
@@ -37,9 +37,21 @@
     </div>
     <div id="chat-modal" class="modal hidden">
         <div class="modal-content">
+            <div class="chat-header">
+                <h3><i class="material-icons">chat</i> MKAN Connect Assistant</h3>
+                <span class="close-btn">&times;</span>
+            </div>
+            <div class="chat-body">
+                <div class="chat-initial-message">
+                    <i class="material-icons chat-icon-large">chat</i>
+                    <h2>Start a conversation</h2>
+                    <p>Ask me anything about MKAN Connect or how I can help you today.</p>
+                </div>
+            </div>
             <div class="chat-input">
                 <input type="text" placeholder="Type your message...">
-                <button class="material-icons">send</button>
+                <i class="material-icons">mic</i>
+                <i class="material-icons">send</i>
             </div>
         </div>
     </div>
