--- a/communication/index.html
+++ b/communication/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="top-menu">
-        <a href="#" class="active"><i class="material-icons">chat</i><span>Chats</span></a>
+        <a href="../chat.html" class="active"><i class="material-icons">chat</i><span>Chats</span></a>
         <a href="#"><i class="material-icons">group</i><span>Groups</span></a>
         <a href="#"><i class="material-icons">campaign</i><span>Announcements</span></a>
     </div>
@@ -30,29 +30,6 @@
         <div class="welcome-message">
             <h2>Communication Hub</h2>
             <p>This is the page for Communication Hub.</p>
-        </div>
-    </div>
-    <div id="chat-assistant" class="chat-icon">
-        <i class="material-icons">chat</i>
-    </div>
-    <div id="chat-modal" class="modal hidden">
-        <div class="modal-content">
-            <div class="chat-header">
-                <h3><i class="material-icons">chat</i> MKAN Connect Assistant</h3>
-                <span class="close-btn">&times;</span>
-            </div>
-            <div class="chat-body">
-                <div class="chat-initial-message">
-                    <i class="material-icons chat-icon-large">chat</i>
-                    <h2>Start a conversation</h2>
-                    <p>Ask me anything about MKAN Connect or how I can help you today.</p>
-                </div>
-            </div>
-            <div class="chat-input">
-                <input type="text" placeholder="Type your message...">
-                <i class="material-icons">mic</i>
-                <i class="material-icons">send</i>
-            </div>
         </div>
     </div>
     <script src="../script.js"></script>
